Actualizar style.css avoid overlap v3. hide menu on print version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ footer {
     }
   }
   section {
-   /* margin-top: 50px;*/
+    margin-top: 150px;
   }
 
   header ul {
@@ -498,6 +498,8 @@ footer {
     font-size:12pt;
     color:#444;
   }
+  #banner{
+    display:none;
 }
 
 @media print, screen and (max-height: 680px) {
